# Masterthesis-data-analytics

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  REPRODUCING.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
01_scope/: architecture overview.md  architecture_overview.md  kpi_catalog.md  measurement concept.md
02_data_generation/: README.md  config.yaml  generator.py  validate_data.py
03_embedded_dwh/: anomaly_detection.py  benchmark.py  kpi_queries.sql  load_data.py  schema.sql
04_cloud_dwh/: anomaly_detection.py  benchmark.py  kpi_queries.sql  load_data.py  schema.sql
05_benchmark_results/: benchmark environment.md  benchmark_environment.md  evaluation.py  ki_tracking.xlsx
06_dbt/: README.md
06_dbt/masterthesis/: dbt_project.yml
06_dbt/masterthesis/models/marts/: mart_mrr_monthly.sql  mart_revenue_breakdown.sql
06_dbt/masterthesis/models/staging/: stg_billing_lines.sql
06_tests/: __init__.py  conftest.py  test_benchmark_contract.py  test_generator_contract.py  test_kpi_contract.py  test_sanity.py
07_powerbi/: DuckDB_Dashboard.pbix  PBI_Snowflake.pbix
scripts/: setup.ps1  setup.sh
tests/: __init__.py  conftest.py  test_benchmark_contract.py  test_generator_contract.py  test_kpi_contract.py  test_sanity.py
